<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.marcuswkl.cnsplatform.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marcuswkl.cnsplatform.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.marcuswkl.cnsplatform.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
